# fremorizer

./: .codecov.yml  .cspell.json  .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CODE_STYLE.md  COMPLIANCE_CHECKING.md  CONDA_FORGE_FEEDSTOCK_PLAN.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  YAML_SCHEMA_VALIDATION.md  coveragerc  environment.yaml  meta.yaml  pylintrc  pyproject.toml
.cspell/: ok-unknown-words.txt
.github/: QUICKSTART_PHASE_3_ISSUES.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/PULL_REQUEST_TEMPLATE/: new_release.md
.github/agents/: cmorizer.agent.md  tester.agent.md  testing-agent.agent.md
.github/scripts/: gather_test_outputs.sh
.github/workflows/: build_conda.yml  build_pip.yml  compliance_check.yml  create_test_conda_env.yml  docs.yml  esgf_qa_check.yml  publish_conda.yml  publish_pip.yml  pylint.yml  spell_check.yml  update_tag.yaml  wcrp_compliance_check.yml
docs/: api.rst  commands.rst  conf.py  contributing.rst  contributing_to_docs.rst  cookbook.rst  glossary.rst  index.rst  quickstart.rst  requirements.txt  usage.rst
fremor/: __init__.py  _version.py  cli.py  cmor_config.py  cmor_finder.py  cmor_helpers.py  cmor_init.py  cmor_mixer.py  cmor_tripolar.py  cmor_yamler.py
fremor/tests/: conftest.py  test_cli.py  test_cmor_config_subtool.py  test_cmor_find_subtool.py  test_cmor_finder_make_simple_varlist.py  test_cmor_helpers.py  test_cmor_helpers_update_calendar.py  test_cmor_helpers_update_grid_label.py  test_cmor_init_subtool.py  test_cmor_mixer_calendar_integration.py  test_cmor_mixer_omission_tracking.py  test_cmor_run_subtool.py  test_cmor_run_subtool_cmip7.py  test_cmor_run_subtool_cmip7_further_examples.py  test_cmor_run_subtool_further_examples.py  test_cmor_tripolar.py  test_cmor_yamler_freq_validation.py  test_cmor_yamler_subtool.py
fremorizer/: __init__.py  _version.py  cli.py  cmor_config.py  cmor_constants.py  cmor_finder.py  cmor_helpers.py  cmor_init.py  cmor_mixer.py  cmor_yaml_consolidator.py  cmor_yamler.py  fremor.py
fremorizer/tests/: conftest.py  test_cli.py  test_cmor_find_subtool.py  test_cmor_finder_make_simple_varlist.py  test_cmor_helpers.py  test_cmor_helpers_update_calendar.py  test_cmor_helpers_update_grid_label.py  test_cmor_init_subtool.py  (+8 more)
(+2 files in other folders)
